<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:title="@string/drawer_menu_title_account">
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/drawer_menu_title_my_profile" />
        <item android:id="@+id/nav_my_updates"
            android:icon="@drawable/ic_baseline_dynamic_feed_24"
            android:title="@string/drawer_menu_title_my_live_updates" />
    </group>

    <group android:title="@string/drawer_menu_title_support">
        <item android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/drawer_menu_title_faqs" />
        <item android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/drawer_menu_title_privacy_policy" />
        <item android:id="@+id/nav_contact_support"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/drawer_menu_title_contact_support" />
    </group>

    <group android:title="@string/drawer_menu_title_system">
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/drawer_menu_title_logout" />
    </group>
</menu>